--- a/package.json
+++ b/package.json
@@ -6,10 +6,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.24",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "tailwind-styled-components": "^2.1.6"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3"
   }
 }
